navbar padding tweak to fix text overflow issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3431,7 +3431,7 @@
 		line-height: 4rem;
 		margin: -4rem auto 0 auto;
 		overflow: hidden;
-		padding: 0 2rem 0 0;
+		padding: 0 0rem 0 0;
 		position: relative;
 		width: calc(100% - 4rem);
 		max-width: 72rem;
@@ -3525,7 +3525,7 @@
 					display: block;
 					font-size: 0.8rem;
 					outline: none;
-					padding: 0 2rem;
+					padding: 0 1.8rem;
 				}
 
 					#nav ul.links li a:hover {
